[package]
authors = ["zjm54321 <1779036876@qq.com>"]
edition = "2024"
readme = "README.md"
name = "e-load"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"

bitbang-hal = "0.3.3" #软件i2c
ssd1306 = "0.8.4" 
ina226 = "0.1.1"
mcp4725 = "0.4.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt","stm32f103","medium"]

[features]
dbg = []

# this lets you use `cargo fix`!
[[bin]]
name = "e-load"
test = false
bench = false

[profile.release]
opt-level = 1
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
